@@ -1,5 +1,5 @@
 name=FastAccelStepper
-version=0.8.3
+version=0.9.0
 license=MIT
 author=Jochen Kiemes <jochen@kiemes.de>
 maintainer=Jochen Kiemes <jochen@kiemes.de>
